New Windows Phone 8.1 added and converted the whole solution to a Universal App Also fixed a minor issue I encounter with the outh_verifier param

--- a/src/winjs-oauth-for-twitter/default.html
+++ b/src/winjs-oauth-for-twitter/default.html
@@ -5,15 +5,16 @@
     <title>WinJS OAuth for Twitter</title>
 
     <!-- WinJS references -->
-    <link href="//Microsoft.WinJS.1.0/css/ui-dark.css" rel="stylesheet" />
-    <script src="//Microsoft.WinJS.1.0/js/base.js"></script>
-    <script src="//Microsoft.WinJS.1.0/js/ui.js"></script>
+    <link href="//Microsoft.WinJS.2.0/css/ui-dark.css" rel="stylesheet" />
+    <script src="//Microsoft.WinJS.2.0/js/base.js"></script>
+    <script src="//Microsoft.WinJS.2.0/js/ui.js"></script>
 
     <!-- twitter_oauth_sample references -->
     <link href="/css/default.css" rel="stylesheet" />
     <script src="/js/config.js"></script>
-    <script src="/js/default.js"></script>
     <script src="/js/winjs-oauth-for-twitter.js"></script>
+	<script src="/js/common.js"></script>
+	<script src="/js/default.js"></script>
 </head>
 <body>
     <h1>WinJS OAuth for Twitter</h1>
